--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home of the proud game makers.</title>
+  <title>The proud game makers.</title>
   <link rel="icon" type="image/png" href="https://u.cubeupload.com/Shocked/redhats.png"/>
 </head>
 <body>
