--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
   background-color: #040826;
-  color: #234;
+  color: #FFF;
   margin-bottom: 50px;
 }
 .subtitle {
@@ -59,6 +59,7 @@ body {
   letter-spacing: 0.1rem;
   text-align: center;
   overflow: hidden;
+  color: #E11F3C;
 }
 .container p span.typed-text {
   font-weight: 900;
@@ -139,6 +140,12 @@ a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="
   <p>&nbsp; <a href="https://redhatgames.github.io/games">Games</a> &nbsp;</p>
   <p>&nbsp; <a href="https://redhatgames.github.io/bundles">Bundles</a> &nbsp;</p>
   <p>&nbsp; <a href="mailto:studio.redhat@gmail.com"><button class="navButton">Contact Us!</button></a> &nbsp;</p>
+  <div class="subtitle">
+  	<p>W E ' R E&nbsp; &nbsp; T H E&nbsp; &nbsp; R E D H A T S</p>
+  </div>
+  <div class="container">
+  	<p>The proud game makers.</p>
+  </div>
 </div>
 </body>
 </html>
