--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="
   <p>&nbsp; <a href="#">Home</a> &nbsp;</p>
   <p>&nbsp; <a href="https://redhatgames.github.io/games">Games</a> &nbsp;</p>
   <p>&nbsp; <a href="https://redhatgames.github.io/bundles">Bundles</a> &nbsp;</p>
-  <p>&nbsp; <a href="mailto:studio.redhat@gmail.com"><button class="navButton">Contact Us!</button></a> &nbsp;</p>
+  <p>&nbsp; <a href="mailto:studio.redhat@gmail.com"><button class="navButton">Contact Us!</button></a> &nbsp;</p></div></br>
   <div class="subtitle">
   	<p>W E ' R E&nbsp; &nbsp; T H E&nbsp; &nbsp; R E D H A T S</p>
   </div>
