--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="
   padding: 10px 17px;
   color: #040826;
 }
+em {
+	color: #E11F3C;
+	font-style: italic;
+	font-weight: 700;
+}
 </style>
 <div class="nav">
   <a href="#"><img src="https://u.cubeupload.com/Shocked/redhats.png" alt="RedHat Games Icon" style="width: 100px;"></a>
@@ -146,6 +151,9 @@ a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="
   </div>
   <div class="container">
   	<p>The proud game makers.</p>
+  </div>
+  <div class="paragraph">
+  	<p>We're RedHat Games, but you can call us The Redhats. We release games from time to time, and every 7 games we do a <em>bundle</em>.></p>
   </div>
 </div>
 </body>
