Small CSS changes.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ body {
 .paragraph {
   width: 500px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container {
   height: 70px;
@@ -153,7 +156,7 @@ em {
   	<p>The proud game makers.</p>
   </div>
   <div class="paragraph">
-  	<p>We're RedHat Games, but you can call us The Redhats. We release games from time to time, and every 7 games we do a <em>bundle</em>.></p>
+  	<p>We're RedHat Games, but you can call us The Redhats. We release games from time to time, and every 7 games we do a <em>bundle</em>.</p>
   </div>
 </div>
 </body>
