CSS changes and removed a <div>
Changing the paragraph to be centered while deleting an unneeded extra <div> block.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
   background-color: #040826;
-  color: #FFF;
+  color: white;
   margin-bottom: 50px;
 }
 .subtitle {
@@ -44,7 +44,11 @@ body {
 
 .paragraph {
   width: 500px;
+  font-size: 15px;
+  font-weight: 300;
   text-align: center;
+  overflow: hidden;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,6 +162,5 @@ em {
   <div class="paragraph">
   	<p>We're RedHat Games, but you can call us The Redhats. We release games from time to time, and every 7 games we do a <em>bundle</em>.</p>
   </div>
-</div>
 </body>
 </html>
