New rule, I guess?
CSS of .paragraph didn't work, so .center-paragraph maybe?

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ body {
   align-items: center;
 }
 .center-paragraph {
-  color: #212121;
-  font-weight: 900;
-  opacity: 0.5;
+  color: #FFF;
+  font-weight: 400;
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -159,8 +159,8 @@ em {
   <div class="container">
   	<p>The proud game makers.</p>
   </div>
-  <div class="paragraph">
-  	<p>We're RedHat Games, but you can call us The Redhats. We release games from time to time, and every 7 games we do a <em>bundle</em>.</p>
+  <div class="center-paragraph">
+  	<p>We're RedHat Games, but you can just call us The Redhats. We release games from time to time, and after every 7 games we make, we do a <em>bundle</em>.</p>
   </div>
 </body>
 </html>
