--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@ body {
   font-weight: 400;
   opacity: 0.8;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
+  width: 500px;
 }
 
 .paragraph {
