No!! Darn left aligning!
Take...uh, I lost count. Maybe it was Take 7?

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  width: 200px;
 }
 
 .paragraph {
@@ -162,7 +161,7 @@ em {
   	<p>The proud game makers.</p>
   </div>
   <div class="center-paragraph">
-  	<p>We're RedHat Games, but you can just call us The Redhats. We release games from time to time, and after every 7 games we make, we do a <em>bundle</em>.</p>
+  	<p>We're RedHat Games, but you can just call us The Redhats. We release games</br>from time to time, and after every 7 games we make, we do a <em>bundle</em>.</p>
   </div>
 </body>
 </html>
