One in a million.
I just realized, not many people are gonna see my 404 page, which I kinda made for people to see (yeah, it's stupid). Well, modern problems require modern solutions I guess.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ em {
   <p>&nbsp; <a href="#">Home</a> &nbsp;</p>
   <p>&nbsp; <a href="https://redhatgames.github.io/games">Games</a> &nbsp;</p>
   <p>&nbsp; <a href="https://redhatgames.github.io/bundles">Bundles</a> &nbsp;</p>
+  <p>&nbsp; <a href="https://redhatgames.github.io/error404">404 Page</a> &nbsp;</p>
   <p>&nbsp; <a href="mailto:studio.redhat@gmail.com"><button class="navButton">Contact Us!</button></a> &nbsp;</p>
 </div></br>
   <div class="subtitle">
