--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@ img:hover {
   opacity: 0.5;
 }
 
-a[href="#"], a[href="https://redhatgames.github.io/games"], a[href="https://redhatgames.github.io/bundles"] {
+a[href="#"], a[href="https://redhatgames.github.io/games"], a[href="https://redhatgames.github.io/bundles"], a[href="https://redhatgames.github.io/error404"] {
   color: #374293;
   text-decoration: none;
   transition: 0.25s;
   font-weight: 400;
   font-size: 18px;
 }
-a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="https://redhatgames.github.io/bundles"]:hover {
+a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="https://redhatgames.github.io/bundles"]:hover, a[href="https://redhatgames.github.io/error404"]:hover {
   color: #E11F3C;
   font-weight: 900;
   font-size: 22px;
