--- a/index.html
+++ b/index.html
@@ -1,168 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>The proud game makers.</title>
-  <link rel="icon" type="image/png" href="https://u.cubeupload.com/Shocked/redhats.png"/>
-</head>
-<body>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Red%20Hat%20Display:400,500,600,700,800,900');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Red Hat Display', sans-serif;
-  background-color: #040826;
-  color: white;
-  margin-bottom: 50px;
-}
-.subtitle {
-  font-weight: 900;
-  margin-top: 100px;
-  opacity: 0.5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav {
-  font-weight: 900;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.center-paragraph {
-  color: #FFF;
-  font-weight: 400;
-  opacity: 0.8;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.paragraph {
-  width: 500px;
-  font-size: 15px;
-  font-weight: 300;
-  text-align: center;
-  overflow: hidden;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container {
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container p {
-  font-size: 3rem;
-  padding: 0.5rem;
-  font-weight: 500;
-  letter-spacing: 0.1rem;
-  text-align: center;
-  overflow: hidden;
-  color: #E11F3C;
-}
-.container p span.typed-text {
-  font-weight: 900;
-  color: #69C;
-}
-.container p span.cursor {
-  display: inline-block;
-  background-color: #69C;
-  margin-left: 0.1rem;
-  width: 3px;
-  animation: blink 1s infinite;
-}
-.container p span.cursor.typing {
-  animation: none;
-}
-@keyframes blink {
-  0%  { background-color: #69C; }
-  49% { background-color: rgba(102, 153, 204, 0.1); }
-  50% { background-color: transparent; }
-  99% { background-color: rgba(102, 153, 204, 0.9); }
-  100%  { background-color: #69C; }
-}
-
-img {
-  opacity: 1;
-  transition: 0.25s;
-}
-
-img:hover {
-  opacity: 0.5;
-}
-
-a[href="#"], a[href="https://redhatgames.github.io/games"], a[href="https://redhatgames.github.io/bundles"], a[href="https://redhatgames.github.io/error404"] {
-  color: #374293;
-  text-decoration: none;
-  transition: 0.25s;
-  font-weight: 400;
-  font-size: 18px;
-}
-a[href="#"]:hover, a[href="https://redhatgames.github.io/games"]:hover, a[href="https://redhatgames.github.io/bundles"]:hover, a[href="https://redhatgames.github.io/error404"]:hover {
-  color: #E11F3C;
-  font-weight: 900;
-  font-size: 22px;
-}
-.navButton {
-  font-weight: 500;
-  border: 2px solid;
-  background-color: transparent;
-  border-radius: 5px;
-  padding: 7px 10px;
-  font-size: 16px;
-  cursor: pointer;
-  border-color: #E11F3C;
-  color: #E11F3C;
-  font-family: 'Red Hat Display', sans-serif;
-  font-size: 18px;
-  transition: 0.25s;
-}
-.navButton:hover {
-  background-color: #E11F3C;
-  font-size: 22px;
-  padding: 10px 17px;
-  color: #040826;
-}
-em {
-	color: #E11F3C;
-	font-style: italic;
-	font-weight: 700;
-}
-</style>
-<div class="nav">
-  <a href="#"><img src="https://u.cubeupload.com/Shocked/redhats.png" alt="RedHat Games Icon" style="width: 100px;"></a>
-  <style>
-    .line {
-      margin-right: 15px;
-      border-left: 2px solid #374293;
-      height: 60px;
-      border-radius: 50px;
-    }
-  </style>
-  <div class="line"></div>
-  <p>&nbsp; <a href="#">Home</a> &nbsp;</p>
-  <p>&nbsp; <a href="https://redhatgames.github.io/games">Games</a> &nbsp;</p>
-  <p>&nbsp; <a href="https://redhatgames.github.io/bundles">Bundles</a> &nbsp;</p>
-  <p>&nbsp; <a href="https://redhatgames.github.io/error404">404 Page</a> &nbsp;</p>
-  <p>&nbsp; <a href="mailto:studio.redhat@gmail.com"><button class="navButton">Contact Us!</button></a> &nbsp;</p>
-</div></br>
-  <div class="subtitle">
-  	<p>W E ' R E&nbsp; &nbsp; T H E&nbsp; &nbsp; R E D H A T S</p>
-  </div>
-  <div class="container">
-  	<p>The proud game makers.</p>
-  </div>
-  <div class="center-paragraph">
-  	<p>We're RedHat Games, but you can just call us The Redhats. We release games</br>from time to time, and after every 7 games we make, we do a <em>bundle</em>.</p>
-  </div>
-</body>
+<html lang="en">
+  <head>
+	  <meta charset="UTF-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	  <title>RedHat Games | Official Site</title>
+	  <link rel="icon" type="image/png" href="https://redhatgames.github.io/media/images/branding/icons/fullcolor-rounded.png">
+	  <link rel="stylesheet" href="redhat.css">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  </head>
+  <body>
+    <div class="nav">
+      <div class="wrapper">
+        <div class="navcontent image">
+          <a href="https://redhatgames.github.io/"><img src="https://redhatgames.github.io/media/images/branding/icons/fullcolor-rounded.png" draggable="false"></a>
+        </div>
+        <div id="home" class="navcontent navlink" style="margin-top: 50%;">
+          <h2><a href="#">Home</a></h2>
+          <i class="fas fa-external-link-square-alt"></i>
+        </div>
+        <div id="about" class="navcontent navlink">
+          <h2><a href="#">About</a></h2>
+          <i class="fas fa-external-link-square-alt"></i>
+        </div>
+        <div id="games" class="navcontent navlink">
+          <h2><a href="#">Games</a></h2>
+          <i class="fas fa-external-link-square-alt"></i>
+        </div>
+        <div id="contact" class="navcontent navlink">
+          <h2><a href="#">Contact</a></h2>
+          <i class="fas fa-external-link-square-alt"></i>
+        </div>
+        <div id="back" class="navcontent navlink" style="margin-top: 250px;">
+          <h2><a style="cursor: pointer;color: #F73246;" onclick="back()">Go Back</a></h2>
+          <i class="fas fa-external-link-square-alt"></i>
+          <script type="text/javascript">
+            function back() {
+              window.history.back();
+            }
+          </script>
+        </div>
+      </div>
+    </div>
+    <p style="margin-left: 120px;">The site is undergoing maintenance, please check back soon.</p>
+  </body>
 </html>
