Redesigning the website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <title>RedHat Games | Official Site</title>
 	  <link rel="icon" type="image/png" href="https://redhatgames.github.io/media/images/branding/icons/fullcolor-rounded.png">
-	  <link rel="stylesheet" href="redhat.css">
+	  <link rel="stylesheet" href="https://redhatcss.akurothewolf.repl.co/style.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   </head>
   <body>
